// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays help 1`] = `
Object {
  "errors": Array [],
  "exit": true,
  "logs": Array [
    Array [
      "Usage: bin/kibana [options]

Kibana is an open source (Apache Licensed), browser-based analytics and search
dashboard for Elasticsearch.

Options:
  --version, -v        Show version number                             [boolean]
  --help, -h           Show help                                       [boolean]
  --config, -c         Path to the config file, can be changed with the
                       \`CONFIG_PATH\` environment variable as well.      [string]
  --elasticsearch, -e  URI for Elasticsearch instance                   [string]
  --host, -H           The host to bind to                              [string]
  --port, -p           The port to bind Kibana to                       [number]
  --quiet, -q          Prevent all logging except errors
  --silent, -Q         Prevent all logging
  --verbose            Turns on verbose logging
  --log-file, -l       The file to log to                               [string]
  --dev                Run the server with development mode defaults
  --ssl                Dev only. Specify --no-ssl to not run the dev server
                       using HTTPS                     [boolean] [default: true]
  --base-path          Dev only. Specify --no-base-path to not put a proxy with
                       a random base path in front of the dev server
                                                       [boolean] [default: true]
  --watch              Dev only. Specify --no-watch to prevent automatic
                       restarts of the server in dev mode
                                                       [boolean] [default: true]

Documentation: https://elastic.co/kibana
",
    ],
  ],
  "result": Object {
    "$0": "--help",
    "_": Array [],
    "base-path": true,
    "basePath": true,
    "config": undefined,
    "dev": undefined,
    "elasticsearch": undefined,
    "h": true,
    "help": true,
    "host": undefined,
    "log-file": undefined,
    "plugin-dir": undefined,
    "port": undefined,
    "quiet": undefined,
    "silent": undefined,
    "ssl": true,
    "v": false,
    "verbose": undefined,
    "version": false,
    "watch": true,
  },
  "warnings": Array [],
}
`;

exports[`displays version 1`] = `
Object {
  "errors": Array [],
  "exit": true,
  "logs": Array [
    Array [
      "5.2.2",
    ],
  ],
  "result": Object {
    "$0": "--version",
    "_": Array [],
    "base-path": true,
    "basePath": true,
    "config": undefined,
    "dev": undefined,
    "elasticsearch": undefined,
    "h": false,
    "help": false,
    "host": undefined,
    "log-file": undefined,
    "plugin-dir": undefined,
    "port": undefined,
    "quiet": undefined,
    "silent": undefined,
    "ssl": true,
    "v": true,
    "verbose": undefined,
    "version": true,
    "watch": true,
  },
  "warnings": Array [],
}
`;

exports[`fails for unknown options 1`] = `
Object {
  "errors": Array [
    Array [
      "The following options were not recognized:
  [1m[\\"foo\\"][22m",
    ],
    Array [
      "",
    ],
    Array [
      "Specify --help for available options",
    ],
  ],
  "exit": true,
  "logs": Array [],
  "result": Object {
    "$0": "--foo",
    "_": Array [],
    "base-path": true,
    "basePath": true,
    "config": undefined,
    "dev": undefined,
    "elasticsearch": undefined,
    "foo": true,
    "h": false,
    "help": false,
    "host": undefined,
    "log-file": undefined,
    "plugin-dir": undefined,
    "port": undefined,
    "quiet": undefined,
    "silent": undefined,
    "ssl": true,
    "v": false,
    "verbose": undefined,
    "version": false,
    "watch": true,
  },
  "warnings": Array [],
}
`;

exports[`fails if config file does not exist 1`] = `
Object {
  "errors": Array [
    Array [
      "Config file [/some-folder/kibana/config.yml] does not exist",
    ],
    Array [
      "",
    ],
    Array [
      "Specify --help for available options",
    ],
  ],
  "exit": true,
  "logs": Array [],
  "result": Object {
    "$0": "--config /some-folder/kibana/config.yml",
    "_": Array [],
    "base-path": true,
    "basePath": true,
    "c": "/some-folder/kibana/config.yml",
    "config": "/some-folder/kibana/config.yml",
    "dev": undefined,
    "elasticsearch": undefined,
    "h": false,
    "help": false,
    "host": undefined,
    "log-file": undefined,
    "plugin-dir": undefined,
    "port": undefined,
    "quiet": undefined,
    "silent": undefined,
    "ssl": true,
    "v": false,
    "verbose": undefined,
    "version": false,
    "watch": true,
  },
  "warnings": Array [],
}
`;

exports[`fails if port is not a number 1`] = `
Object {
  "errors": Array [
    Array [
      "[port] must be a number, but was a string",
    ],
    Array [
      "",
    ],
    Array [
      "Specify --help for available options",
    ],
  ],
  "exit": true,
  "logs": Array [],
  "result": Object {
    "$0": "--port test",
    "_": Array [],
    "base-path": true,
    "basePath": true,
    "config": undefined,
    "dev": undefined,
    "elasticsearch": undefined,
    "h": false,
    "help": false,
    "host": undefined,
    "log-file": undefined,
    "p": NaN,
    "plugin-dir": undefined,
    "port": NaN,
    "quiet": undefined,
    "silent": undefined,
    "ssl": true,
    "v": false,
    "verbose": undefined,
    "version": false,
    "watch": true,
  },
  "warnings": Array [],
}
`;

exports[`handles args with dashes 1`] = `
Object {
  "errors": Array [],
  "exit": false,
  "logs": Array [],
  "result": Object {
    "$0": "--base-path",
    "_": Array [],
    "base-path": true,
    "basePath": true,
    "config": undefined,
    "dev": undefined,
    "elasticsearch": undefined,
    "h": false,
    "help": false,
    "host": undefined,
    "log-file": undefined,
    "plugin-dir": undefined,
    "port": undefined,
    "quiet": undefined,
    "silent": undefined,
    "ssl": true,
    "v": false,
    "verbose": undefined,
    "version": false,
    "watch": true,
  },
  "warnings": Array [],
}
`;

exports[`handles negative args 1`] = `
Object {
  "errors": Array [],
  "exit": false,
  "logs": Array [],
  "result": Object {
    "$0": "--no-ssl --no-base-path",
    "_": Array [],
    "base-path": false,
    "basePath": false,
    "config": undefined,
    "dev": undefined,
    "elasticsearch": undefined,
    "h": false,
    "help": false,
    "host": undefined,
    "log-file": undefined,
    "plugin-dir": undefined,
    "port": undefined,
    "quiet": undefined,
    "silent": undefined,
    "ssl": false,
    "v": false,
    "verbose": undefined,
    "version": false,
    "watch": true,
  },
  "warnings": Array [],
}
`;
